fixed border-bottom(table) and align food pics

--- a/source/sass/catalog-main.scss
+++ b/source/sass/catalog-main.scss
@@ -56,6 +56,7 @@
     font-size: 12px;
     margin-bottom: 23px;
     margin-top: -5px;
+    border-collapse: collapse;
   }
 
   &__order {
@@ -133,10 +134,12 @@
       justify-content: space-between;
       width: 324px;
       background-color: #f2f2f2;
-      margin-top: 100px;
-      margin-bottom: 50px;
-      margin-left: 0;
+      margin: 100px 0 50px 0;
       padding-bottom: 40px;
+      & picture {
+        display: block;
+        margin-top: auto;
+      }
     }
     &__header {
       border-top: none;
@@ -176,10 +179,12 @@
       flex-grow: 0;
       margin-right: 37px;
       margin-left: 37px;
+      margin-top: 16px;
     }
     &__list {
       & td {
         padding-bottom: 8px;
+        padding-top: 5px;
         border-bottom: 1px solid #cdcdcd;
       }
     }
@@ -207,7 +212,7 @@
     }
   }
   .catalog-pic {
-    margin-top: -81px;
+    margin-top: -120px;
     margin-left: auto;
   }
 }
